[package]
name = "oylswap"
version = "0.1.0"
edition = "2021"

[features]
test = []
testnet = []
dogecoin = []
luckycoin = []
bellscoin = []
fractal = []
mainnet = []

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]
members = ["alkanes/*", '.']

[workspace.dependencies]
alkanes-support = { git = "https://github.com/kungfuflex/alkanes-rs", branch = "hude/test_revert" }
alkanes-runtime = { git = "https://github.com/kungfuflex/alkanes-rs", branch = "hude/test_revert"  }
alkanes-std-owned-token = { git = "https://github.com/kungfuflex/alkanes-rs", branch = "hude/test_revert"  }
metashrew-support = { git = "https://github.com/kungfuflex/alkanes-rs", branch = "hude/test_revert"  }
protorune-support = { git = "https://github.com/kungfuflex/alkanes-rs", branch = "hude/test_revert"  }
ordinals = { git = "https://github.com/kungfuflex/alkanes-rs", branch = "hude/test_revert"  }
alkanes-runtime-pool = { path = "./alkanes/alkanes-runtime-pool" }
anyhow = "1.0.94"
bitcoin = { version = "0.32.4", features = ["rand"] }
hex = "0.4.3"
num = "0.4.3"
ruint = "1.13.1"

[dependencies]
alkanes-support = { workspace = true }
alkanes-runtime = { workspace = true }
metashrew-support = { workspace = true }
protorune-support = { workspace = true }
ordinals = { workspace = true }
alkanes-runtime-pool = { workspace = true }
anyhow = { workspace = true }
bitcoin = { workspace = true }
hex = { workspace = true }
num = { workspace = true }
ruint = { workspace = true }


[dev-dependencies]
alkanes = { git = "https://github.com/kungfuflex/alkanes-rs", branch = "hude/test_revert" , features = [
    "test-utils",
] }
metashrew = { git = "https://github.com/kungfuflex/alkanes-rs", branch = "hude/test_revert" , features = [
    "test-utils",
] }
protorune = { git = "https://github.com/kungfuflex/alkanes-rs", branch = "hude/test_revert" , features = [
    "test-utils",
] }
wasm-bindgen = "0.2.100"
wasm-bindgen-test = "0.3.49"
hex_lit = "0.1.1"

[build-dependencies]
anyhow = "1.0.90"
flate2 = "1.0.34"
hex = "0.4.3"