[package]
name = "alkanes-runtime-factory"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
alkanes-support = { workspace = true }
alkanes-runtime = { workspace = true }
metashrew-support = { workspace = true }
protorune-support = { workspace = true }
anyhow = "1.0.91"
bitcoin = { version = "0.32.4", features = ["rand"] }
hex = "0.4.3"