[package]
name = "pool"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
alkanes-support = { workspace = true }
alkanes-runtime = { workspace = true }
metashrew-support = { workspace = true }
protorune-support = { workspace = true }
alkanes-std-owned-token = { workspace = true }
alkanes-runtime-pool = { path = "../alkanes-runtime-pool" }
anyhow = "1.0.91"
bitcoin = { version = "0.32.4", features = ["rand"] }
num = "0.4.3"
ruint = "1.12.3"
hex = "0.4.3"